# audiobook_pipeline

./: .gitignore  Dockerfile  README.md  main_api.py  main_ui.py  pyproject.toml
api/: routes.py  schemas.py
core/: tts_engine.py
data/: init.txt
services/: audio_mixer.py  text_processor.py
