[project]
name = "audiobook-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.3",
    "nltk>=3.9.4",
    "pydantic>=2.13.4",
    "pydub>=0.25.1",
    "python-multipart",
    "soundfile>=0.13.1",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "uvicorn>=0.49.0",
    "voxcpm>=2.0.3",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
